crates/context-macro/tests/constraints/invalid_seeds_syntax.fail.stderr
error: Invalid seeds format
  --> tests/constraints/invalid_seeds_syntax.fail.rs:26:17
   |
26 |         seeds = &[&args.admin],
   |                 ^^^^^^^^^^^^^^
